[metadata]
name = akanda-rug
summary = Akanda Router Update Generator manages tenant routers
description-file =
    README.rst
author = DreamHost
author-email = dev-community@dreamhost.com
home-page = http://github.com/dreamhost/akanda-rug
classifier =
    Environment :: OpenStack
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: BSD License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 2.6

[files]
packages =
    akanda
    akanda.rug
namespace_packages =
    akanda

[global]
setup-hooks =
    pbr.hooks.setup_hook

[entry_points]
console_scripts =
    akanda-rug-service=akanda.rug.main:main
    akanda-debug-router=akanda.rug.debug:debug_one_router
    rug-ctl=akanda.rug.cli.main:main
akanda.rug.cli =
    router debug=akanda.rug.cli.router:RouterDebug
    router manage=akanda.rug.cli.router:RouterManage
    tenant debug=akanda.rug.cli.tenant:TenantDebug
    tenant manage=akanda.rug.cli.tenant:TenantManage
    workers debug=akanda.rug.cli.worker:WorkerDebug

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source

[nosetests]
verbosity = 2
detailed-errors = 1
cover-package = akanda
