[metadata]
name = akanda-rug
version = 2015.2.1
summary = Akanda Router Update Generator manages tenant routers
description-file =
    README.md
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = http://github.com/stackforge/akanda-rug
classifier =
    Environment :: OpenStack
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 2.6

[files]
packages =
    akanda
    akanda.rug
namespace_packages =
    akanda

[global]
setup-hooks =
    pbr.hooks.setup_hook

[entry_points]
console_scripts =
    akanda-rug-service=akanda.rug.main:main
    akanda-debug-router=akanda.rug.debug:debug_one_router
    rug-ctl=akanda.rug.cli.main:main
akanda.rug.cli =
    config reload=akanda.rug.cli.config:ConfigReload
    router debug=akanda.rug.cli.router:RouterDebug
    router manage=akanda.rug.cli.router:RouterManage
    router update=akanda.rug.cli.router:RouterUpdate
    router rebuild=akanda.rug.cli.router:RouterRebuild
    tenant debug=akanda.rug.cli.tenant:TenantDebug
    tenant manage=akanda.rug.cli.tenant:TenantManage
    workers debug=akanda.rug.cli.worker:WorkerDebug
    browse=akanda.rug.cli.browse:BrowseRouters
    poll=akanda.rug.cli.poll:Poll
    ssh=akanda.rug.cli.router:RouterSSH

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source

[nosetests]
verbosity = 2
detailed-errors = 1
cover-package = akanda
