[metadata]
name = astara
summary = Astara Network Orchestrator
description-file =
    README.md
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = http://github.com/openstack/astara
classifier =
    Environment :: OpenStack
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7

[files]
packages =
    astara

[global]
setup-hooks =
    pbr.hooks.setup_hook

[entry_points]
console_scripts =
    akanda-rug-service=astara.main:main
    akanda-pez-service=astara.pez.service:main
    akanda-debug-router=astara.debug:debug_one_router
    akanda-rug-dbsync=astara.db.sqlalchemy.dbsync:main
    rug-ctl=astara.cli.main:main
    astara-orchestrator=astara.main:main
    astara-pez-service=astara.pez.service:main
    astara-debug-router=astara.debug:debug_one_router
    astara-dbsync=astara.db.sqlalchemy.dbsync:main
    astara-ctl=astara.cli.main:main
astara.cli =
    config reload=astara.cli.config:ConfigReload

    resource debug=astara.cli.resource:ResourceDebug
    resource manage=astara.cli.resource:ResourceManage
    resource update=astara.cli.resource:ResourceUpdate
    resource rebuild=astara.cli.resource:ResourceRebuild

    # NOTE(adam_g): The 'router' commands are deprecated in favor
    # of the generic 'resource' commands and can be dropped in M.
    router debug=astara.cli.router:RouterDebug
    router manage=astara.cli.router:RouterManage
    router update=astara.cli.router:RouterUpdate
    router rebuild=astara.cli.router:RouterRebuild
    tenant debug=astara.cli.tenant:TenantDebug
    tenant manage=astara.cli.tenant:TenantManage
    workers debug=astara.cli.worker:WorkerDebug
    global debug=astara.cli.global_debug:GlobalDebug
    browse=astara.cli.browse:BrowseRouters
    poll=astara.cli.poll:Poll
    ssh=astara.cli.router:RouterSSH
oslo.config.opts =
    astara = astara.opts:list_opts
    astara.ceilometer = astara.opts:list_ceilometer_opts
    astara.agent = astara.opts:list_agent_opts
    astara.coordination = astara.opts:list_coordination_opts
    astara.pez = astara.opts:list_pez_opts
    astara.router = astara.opts:list_router_opts
    astara.loadbalancer = astara.opts:list_loadbalancer_opts

[build_sphinx]
all_files = 1
build-dir = docs/build
source-dir = docs/source

[nosetests]
verbosity = 2
detailed-errors = 1
cover-package = astara
